--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,4 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0.31"
-half = {version = "2.1.0", optional = true}
-
-[features]
-default = ["half"]
+half = "2.1.0"
