--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "cybor"
+name = "borc"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/na-sa-do/borc"
+license = "MIT OR Apache-2.0"
+keywords = ["cbor"]
+categories = ["encoding"]
 
 [dependencies]
-thiserror = "1.0.31"
 half = "2.1.0"
+thiserror = "1.0.31"
