--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ keywords = ["cbor"]
 categories = ["encoding"]
 
 [dependencies]
+chrono = { version = "0.4.22", optional = true }
 half = "2.1.0"
 thiserror = "1.0.31"
