--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ categories = ["encoding"]
 [dependencies]
 chrono = { version = "0.4.22", optional = true }
 half = "2.1.0"
+num-bigint = { version = "0.4.3", optional = true }
 thiserror = "1.0.31"
